<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_working_day"
        android:title=""
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction">
    </item>
    <item android:id="@+id/action_location"
        android:title=""
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/action_logout"
        android:title="@string/log_out"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/action_close_current_day"
        android:title="@string/day_Close"
        app:showAsAction="never"
        >
    </item>
    <item
        android:id="@+id/action_otp"
        android:title="@string/otp_for_online"
        android:visible="false"
        app:showAsAction="never"
        >
    </item>

</menu>