<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:context=".activity.LoginAmmsActivity"
    tools:showIn="@layout/activity_login_amms">



        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true">
            <TextView
                android:paddingTop="15dp"
                android:textColor="@color/colorSimpleBlack"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/please_login_upper_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:paddingBottom="20dp"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:src="@drawable/app_logo_icon"
                tools:ignore="ContentDescription" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/userId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:hint="@string/prompt_user_id"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:textSize="20sp"
                    android:focusableInTouchMode="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                app:errorEnabled="true"
                app:passwordToggleDrawable="@drawable/ic_password_visibility_selector"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:textSize="20sp"
                    android:focusableInTouchMode="true"
                    tools:ignore="InvalidImeActionId" />

            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:windowSoftInputMode="adjustResize"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="serif"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/action_sign_in_short"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textSize="17sp"
                    android:theme="@style/ButtonStyle"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/reset_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:text="@string/action_reset"
                    android:textAllCaps="false"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:theme="@style/ButtonStyle"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>



        </LinearLayout>



</ScrollView>

